4.0003    2024-06-07

- No longer auto-tested on 5.12 and below because build-time dependencies
  no longer build reliably

- Data updates, including Lithuania changing its trunk prefix, Mexico
  getting rid of theirs, and Uzbekistan changing both its trunk and
  international prefixes

- Trying to put letters in a phone number now emits warnings, and will
  become fatal 2 years after this release

4.0002    2024-03-08

- Added timezones() method

- Data updates

- Tests are now forgiving of a missing Parallel::ForkManager
  (which isn't available on some Solaris machines)

4.0001    2023-12-10

- Clarification in doco re supported perl versions

- Data updates

4.0000    2023-09-03

- Switch to Data::CompactReadonly for UK database. The UK database is now
  less than 10% of its previous size.

- Data updates

3.9002    2023-06-14

- Data updates only

3.9001    2023-03-07

- Bug fix: if libphonenumber doesn't define any formatters for a country,
  such as for Bonaire (BQ), do the best we can and return +CC NNNNN
  instead of nothing. This was a regression in 3.9000, see
  https://github.com/DrHyde/perl-modules-Number-Phone/issues/122

3.9000    2023-03-05

- Add validation using libphonenumber's data for non-geographic country
  codes like +800 (International free phone) and +870 (Inmarsat). See
  https://github.com/DrHyde/perl-modules-Number-Phone/issues/17

- Bug fix: NANP toll-free numbers corrected. 833 area code now supported,
  and regex fixed to only match when the B and C digits are the same, so
  800 is toll-free, 888 is toll-free, but 808 is not. See
  https://github.com/DrHyde/perl-modules-Number-Phone/issues/110

- Bug fix: NANP 1-600 area code is non-geographic. See
  https://github.com/DrHyde/perl-modules-Number-Phone/issues/113

- Workaround: OFCOM have the wrong number length for the +44 800 716 range,
  we now have an egregious hack to work around that. See
  https://github.com/DrHyde/perl-modules-Number-Phone/issues/112
