@@ -5,7 +5,7 @@ use nptestutils;
 
 use Test::More;
 
-use Number::Phone::Country qw(noexport);
+use Number::Phone::Country;
 
 is(Number::Phone::Country::phone2country('+47 1234 5678'),   'NO', "first of three");
 is(Number::Phone::Country::phone2country('+44 20 12345678'), 'GB', "uk not set accidentally");
