@@ -5,7 +5,7 @@ use nptestutils;
 
 use Test::More;
 
-use Number::Phone::Country qw(noexport uk);
+use Number::Phone::Country qw(uk);
 
 is(Number::Phone::Country::phone2country('+44 20 12345678'), 'UK', "can return UK instead of GB");
 
